--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
 
+<!-- comentário -->
+
 <head>
 	<title>Prato Verde Sustent&aacute;vel</title>
 	<meta charset="utf-8">
