--- a/index.html
+++ b/index.html
@@ -743,6 +743,8 @@
 	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
 
+
+	<!-- Comentário teste -->
 </body>
 
 </html>
